--- a/portfolio.html
+++ b/portfolio.html
@@ -27,30 +27,30 @@
           <a href="./index.html" class="logo">
             <span class="accent">Web</span>Studio</a
           >
-          <ul class="site-nav link">
-            <li class="item">
-              <a href="./index.html" class="link">Студія</a>
+          <ul class="nav-list">
+            <li class="nav-item">
+              <a href="./index.html" class="nav-link">Студія</a>
             </li>
-            <li class="item">
-              <a href="./portfolio.html" class="link current">Портфоліо</a>
+            <li class="nav-item">
+              <a href="./portfolio.html" class="nav-link current">Портфоліо</a>
             </li>
-            <li class="item">
-              <a href="#contacts" class="link">Контакти</a>
+            <li class="nav-item">
+              <a href="#contacts" class="nav-link">Контакти</a>
             </li>
           </ul>
         </nav>
-        <ul class="call-us link">
-          <li class="item">
-            <a href="mailto:info@devstudio.com" class="link mail">
-              <svg class="icon">
+        <ul class="call-us-list">
+          <li class="call-us-item">
+            <a href="mailto:info@devstudio.com" class="call-us-link mail">
+              <svg class="icon" width="20px" height="20px">
                 <use href="./images/symbol-defs.svg#icon-mail"></use>
               </svg>
               info@devstudio.com</a
             >
           </li>
           <li class="item">
-            <a href="tel:+380961111111" class="link tel">
-              <svg class="icon">
+            <a href="tel:+380961111111" class="call-us-link tel">
+              <svg class="icon" width="20px" height="20px">
                 <use href="./images/symbol-defs.svg#icon-smartphone"></use>
               </svg>
               +38 096 111 11 11</a
@@ -87,12 +87,18 @@
           <ul class="examples-list">
             <li class="item">
               <a href="#" class="portfolio-link">
-                <img
-                  src="./images/portfolio/project1.jpeg"
-                  alt="макбук з портфоліо"
-                  width="370"
-                />
-
+                <div class="thumb-card">
+                  <img
+                    src="./images/portfolio/project1.jpeg"
+                    alt="макбук з портфоліо"
+                    width="370"
+                  />
+                  <p class="thumb-text">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
                 <div class="wrap-card-portfolio">
                   <h2 class="tittle-card">Технокряк</h2>
                   <p class="text">Веб-сайт</p>
@@ -101,11 +107,18 @@
             </li>
             <li class="item">
               <a href="" class="portfolio-link">
-                <img
-                  src="./images/portfolio/project2.jpeg"
-                  alt="Постер New Orlean vs Golden Star"
-                  width="370"
-                />
+                <div class="thumb-card">
+                  <img
+                    src="./images/portfolio/project2.jpeg"
+                    alt="Постер New Orlean vs Golden Star"
+                    width="370"
+                  />
+                  <p class="thumb-text">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
                 <div class="wrap-card-portfolio">
                   <h2 class="tittle-card">Постер New Orlean vs Golden Star</h2>
                   <p class="text">Дизайн</p>
@@ -115,11 +128,18 @@
 
             <li class="item">
               <a href="" class="portfolio-link">
-                <img
-                  src="./images/portfolio/project3.jpeg"
-                  alt="риба з текстом"
-                  width="370"
-                />
+                <div class="thumb-card">
+                  <img
+                    src="./images/portfolio/project3.jpeg"
+                    alt="риба з текстом"
+                    width="370"
+                  />
+                  <p class="thumb-text">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
                 <div class="wrap-card-portfolio">
                   <h2 class="tittle-card">Ресторан Seafood</h2>
                   <p class="text">Додаток</p>
@@ -128,11 +148,18 @@
             </li>
             <li class="item">
               <a href="" class="portfolio-link">
-                <img
-                  src="./images/portfolio/project4.jpeg"
-                  alt="наушники"
-                  width="370"
-                />
+                <div class="thumb-card">
+                  <img
+                    src="./images/portfolio/project4.jpeg"
+                    alt="наушники"
+                    width="370"
+                  />
+                  <p class="thumb-text">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
                 <div class="wrap-card-portfolio">
                   <h2 class="tittle-card">Проєкт Prime</h2>
                   <p class="text">Маркетинг</p>
@@ -141,11 +168,18 @@
             </li>
             <li class="item">
               <a href="" class="portfolio-link">
-                <img
-                  src="./images/portfolio/project5.jpeg"
-                  alt="две коробки"
-                  width="370"
-                />
+                <div class="thumb-card">
+                  <img
+                    src="./images/portfolio/project5.jpeg"
+                    alt="две коробки"
+                    width="370"
+                  />
+                  <p class="thumb-text">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
                 <div class="wrap-card-portfolio">
                   <h2 class="tittle-card">Проєкт Boxes</h2>
                   <p class="text">Додаток</p>
@@ -154,11 +188,18 @@
             </li>
             <li class="item">
               <a href="" class="portfolio-link">
-                <img
-                  src="./images/portfolio/project6.jpeg"
-                  alt="монітор компʼютера"
-                  width="370"
-                />
+                <div class="thumb-card">
+                  <img
+                    src="./images/portfolio/project6.jpeg"
+                    alt="монітор компʼютера"
+                    width="370"
+                  />
+                  <p class="thumb-text">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
                 <div class="wrap-card-portfolio">
                   <h2 class="tittle-card">Inspiration has no Borders</h2>
                   <p class="text">Веб-сайт</p>
@@ -167,11 +208,18 @@
             </li>
             <li class="item">
               <a href="" class="portfolio-link">
-                <img
-                  src="./images/portfolio/project7.jpeg"
-                  alt="відкритий журнал"
-                  width="370"
-                />
+                <div class="thumb-card">
+                  <img
+                    src="./images/portfolio/project7.jpeg"
+                    alt="відкритий журнал"
+                    width="370"
+                  />
+                  <p class="thumb-text">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
                 <div class="wrap-card-portfolio">
                   <h2 class="tittle-card">Видання Limited Edition</h2>
                   <p class="text">Дизайн</p>
@@ -179,12 +227,19 @@
               </a>
             </li>
             <li class="item">
-              <a href="" class="portfolio-link"
-                ><img
-                  src="./images/portfolio/project8.jpeg"
-                  alt="бірка"
-                  width="370"
-                />
+              <a href="" class="portfolio-link">
+                <div class="thumb-card">
+                  <img
+                    src="./images/portfolio/project8.jpeg"
+                    alt="бірка"
+                    width="370"
+                  />
+                  <p class="thumb-text">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
                 <div class="wrap-card-portfolio">
                   <h2 class="tittle-card">Проєкт LAB</h2>
                   <p class="text">Маркетинг</p>
@@ -193,11 +248,18 @@
             </li>
             <li class="item">
               <a href="" class="portfolio-link">
-                <img
-                  src="./images/portfolio/project9.jpeg"
-                  alt="макбук на столі  "
-                  width="370"
-                />
+                <div class="thumb-card">
+                  <img
+                    src="./images/portfolio/project9.jpeg"
+                    alt="макбук на столі  "
+                    width="370"
+                  />
+                  <p class="thumb-text">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
                 <div class="wrap-card-portfolio">
                   <h2 class="tittle-card">Growing Business</h2>
                   <p class="text">Додаток</p>
@@ -208,10 +270,11 @@
         </div>
       </section>
     </main>
+
     <footer id="contacts" class="footer">
       <div class="container footer-container">
         <div class="container-left">
-          <a href="./index.html" class="logo">
+          <a href="./index.html" class="footer-logo">
             <span class="accent">Web</span>Studio</a
           >
           <address class="adress">
@@ -221,17 +284,19 @@
                   href="https://goo.gl/maps/7unWGDFjXXysJGBB8"
                   target="_blank"
                   rel="noopener noreferrer"
-                  class="link adress"
+                  class="footer-link adress"
                   >м. Київ, пр-т Лесі Українки, 26</a
                 >
               </li>
               <li class="footer-item">
-                <a href="mailto:info@devstudio.com" class="link"
+                <a href="mailto:info@devstudio.com" class="footer-link"
                   >info@devstudio.com</a
                 >
               </li>
               <li class="footer-item">
-                <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+                <a href="tel:+380961111111" class="footer-link"
+                  >+38 096 111 11 11</a
+                >
               </li>
             </ul>
           </address>
