--- a/index.html
+++ b/index.html
@@ -29,30 +29,30 @@
           <a href="./index.html" class="logo">
             <span class="accent">Web</span>Studio</a
           >
-          <ul class="site-nav link">
-            <li class="item">
-              <a href="#about" class="link current">Студія</a>
+          <ul class="nav-list">
+            <li class="nav-item">
+              <a href="#about" class="nav-link current">Студія</a>
             </li>
-            <li class="item">
-              <a href="./portfolio.html" class="link">Портфоліо</a>
+            <li class="nav-item">
+              <a href="./portfolio.html" class="nav-link">Портфоліо</a>
             </li>
-            <li class="item">
-              <a href="#contacts" class="link">Контакти</a>
+            <li class="nav-item">
+              <a href="#contacts" class="nav-link">Контакти</a>
             </li>
           </ul>
         </nav>
-        <ul class="call-us link">
-          <li class="item">
-            <a href="mailto:info@devstudio.com" class="link mail">
-              <svg class="icon">
+        <ul class="call-us-list">
+          <li class="call-us-item">
+            <a href="mailto:info@devstudio.com" class="call-us-link mail">
+              <svg class="icon" width="20px" height="20px">
                 <use href="./images/symbol-defs.svg#icon-mail"></use>
               </svg>
               info@devstudio.com</a
             >
           </li>
           <li class="item">
-            <a href="tel:+380961111111" class="link tel">
-              <svg class="icon">
+            <a href="tel:+380961111111" class="call-us-link tel">
+              <svg class="icon" width="20px" height="20px">
                 <use href="./images/symbol-defs.svg#icon-smartphone"></use>
               </svg>
               +38 096 111 11 11</a
@@ -67,7 +67,9 @@
       <section class="hero section">
         <div class="container">
           <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
-          <button type="button" class="button">Замовити послугу</button>
+          <button type="button" data-modal-open class="button">
+            Замовити послугу
+          </button>
         </div>
       </section>
       <!--  Преимущества  -->
@@ -416,7 +418,7 @@
     <footer id="contacts" class="footer">
       <div class="container footer-container">
         <div class="container-left">
-          <a href="./index.html" class="logo">
+          <a href="./index.html" class="footer-logo">
             <span class="accent">Web</span>Studio</a
           >
           <address class="adress">
@@ -426,17 +428,19 @@
                   href="https://goo.gl/maps/7unWGDFjXXysJGBB8"
                   target="_blank"
                   rel="noopener noreferrer"
-                  class="link adress"
+                  class="footer-link adress"
                   >м. Київ, пр-т Лесі Українки, 26</a
                 >
               </li>
               <li class="footer-item">
-                <a href="mailto:info@devstudio.com" class="link"
+                <a href="mailto:info@devstudio.com" class="footer-link"
                   >info@devstudio.com</a
                 >
               </li>
               <li class="footer-item">
-                <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+                <a href="tel:+380961111111" class="footer-link"
+                  >+38 096 111 11 11</a
+                >
               </li>
             </ul>
           </address>
@@ -477,5 +481,15 @@
         </div>
       </div>
     </footer>
+    <div class="backdrop" data-modal>
+      <div class="modal">
+        <button type="button" data-modal-close class="modal-button">
+          <svg class="icon-close" width="18px" height="18px">
+            <use href="./images/symbol-defs.svg#icon-close"></use>
+          </svg>
+        </button>
+      </div>
+    </div>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
