--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@
       </div>
     </footer>
     <div class="backdrop" data-modal>
-      <div class="modal">
+      <div class="modal is-hidden">
         <button type="button" data-modal-close class="modal-button">
           <svg class="icon-close" width="18px" height="18px">
             <use href="./images/symbol-defs.svg#icon-close"></use>
