--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@
         </div>
       </div>
     </footer>
-    <div class="backdrop" data-modal>
+    <div class="backdrop is-hidden" data-modal>
       <div class="modal is-hidden">
         <button type="button" data-modal-close class="modal-button">
           <svg class="icon-close" width="18px" height="18px">
