--- a/index.html
+++ b/index.html
@@ -488,6 +488,7 @@
             <use href="./images/symbol-defs.svg#icon-close"></use>
           </svg>
         </button>
+        <form action=""></form>
       </div>
     </div>
     <script src="./js/modal.js"></script>
